Fix #413. (Maybe there should be a div that wraps them both? but this works.)

--- a/app/assets/stylesheets/locals/plain.css.scss
+++ b/app/assets/stylesheets/locals/plain.css.scss
@@ -1,7 +1,7 @@
 .plain {
     background: transparent !important;
     #player {
-        #transcript {
+        #transcript,#find-help {
             // Don't include the transcript when 
             // the whole player is in an iframe.
             display: none;
